Fix an issue with footer alignment

--- a/style.css
+++ b/style.css
@@ -238,8 +238,7 @@ li {
 .footer {
   background-color: #1F2937;
   flex: 1;
-  justify-content: center;
-  align-content: center;
   color:#E5E7EB;
-  padding: 30px 40%;
+  text-align: center;
+  padding: 30px 0;
 }
